@@ -19,6 +19,9 @@ Changes since the uhexen2-1.5.1 release:
   the software renderer, controlled by new cvar "contrans".
   Valid values for contrans are 0 (solid), 1 (transparent)
   and 2 (very transparent).
+* All platforms, software renderer: Fixed wrong transparency
+  issue with certain models when not using the x86 assembler
+  drawing routines.
 * All platforms: Added on-screen fps counter to hexen2 (do
   "showfps 1" from the console).  Updated existing showfps
   code of hexenworld.
